--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "product-management-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "an api to create product inventory for retail",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
-  "author": "",
+  "author": "Frank Krogh",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
